--- a/src/components/basket/BasketPage.css
+++ b/src/components/basket/BasketPage.css
@@ -1,19 +1,25 @@
 .basket_check {
-    margin: 20px 50px 0 50px;
+    /*margin: 20px 50px 0 50px;*/
     border: 2px solid #79CBB8FF;
     border-radius: 5px;
     padding: 10px;
-
+    margin: 20px auto;
+    width: 95%;
 }
-.flex_space_between {
+
+.flex_space_between, .flex__space__between {
     display: flex;
     justify-content: space-between;
+    width: 95%;
+    margin: auto;
 }
+
 .summa {
     font-size: 30px;
     color: #47008e;
-    margin-left: 30px;
+    margin-left: 20px;
 }
+
 .check {
     width: 200px;
     height: 40px;
@@ -21,63 +27,81 @@
     font-size: 20px;
     border-radius: 5px;
     margin-right: 30px;
+    align-items: center;
 }
+
 .summaProduct {
     margin-right: 30px;
 }
+
 .data_name {
     font-weight: 700;
     border-bottom: 3px solid #47008e;
-    margin: 0 20px 10px 20px;
     font-size: 20px;
 }
+
 .data_div {
-    margin: 0 20px 0 20px;
+    width: 95%;
+    margin: auto;
     color: #47008e;
 }
+
 .update {
     color: white;
     border-radius: 50px;
     width: 100px;
     margin-right: 30px;
     height: 30px;
+    align-items: center;
 }
+
 .data_input {
-    width: 94%;
+    width: 95%;
+    margin: auto;
 }
+
 .d_flex {
     display: flex;
     justify-content: center;
 }
+
 .save {
     width: 450px;
     margin-left: 60px;
 }
+
 .label_input {
     position: relative;
-    top: 12px;
+    top: 20px;
+    width: 250px;
 }
+
 .label_input_last {
     position: relative;
-    top: 25px;
+    top: 40px;
     visibility: visible;
 }
+
 .btn_last {
     margin-bottom: 20px;
     border: 2px solid #47008e;
 }
+
 .success_byu {
     visibility: visible;
     font-size: 20px;
     margin-right: 30px;
 }
+
 .not_success {
     visibility: hidden;
 }
+
 .byu_ok {
     position: relative;
     top: 5px;
 }
+
 /*.modal_content_basket {*/
 /*    width: 80%;*/
 /*    padding: 10px 20px;*/
@@ -93,34 +117,44 @@
 .roww {
     width: 80%;
 }
+
 /* Очистить поплавки после столбцов */
 .roww:after {
 
     display: table;
     clear: both;
 }
+
 .img {
     height: 100px;
     width: 100px;
     transition: color, transform 500ms ease;
     padding-left: 10px;
 }
-.img:hover{
+
+.img:hover {
     transform: scale(1.5);
 }
+
 .box-shadow {
     box-shadow: 0 5px 7px 2px rgba(0, 0, 0, 0.2);
     margin: 5px 5px 10px;
 }
+
 .border_radius {
     border-radius: 5px;
+    align-items: center;
+    top: 0;
 }
+
 .btn_del {
     padding-right: 10px;
 }
+
 .color_purple {
     color: #47008e;
 }
+
 /*.text-center {*/
 /*    position: relative;*/
 /*    top: 30px;*/
@@ -131,3 +165,75 @@
     justify-content: center
 }
 
+.grid-column {
+    display: grid;
+    grid-template-columns: repeat(6, 3fr);
+}
+
+.edit-date-margin {
+    margin: 20px 10px 10px;
+}
+
+.edit-date-margin-last {
+    margin: 10px;
+}
+.basket-img {
+    width: 300px;
+    height: 300px;
+    color: #47008e;
+}
+.basket-h1 {
+    text-align: center;
+    margin-top: 60px;
+}
+.basket-icon-center {
+    display: flex;
+    justify-content: center;
+}
+
+@media screen and (max-width: 600px) {
+    .flex_space_between {
+        display: block;
+    }
+
+    .select-search {
+        margin: 0;
+    }
+
+    .label_input {
+        position: unset;
+        margin: 20px 5px 0 5px;
+        width: 98%;
+    }
+    .label_input_last {
+        position: unset;
+        margin: 20px 5px 0 5px;
+        width: 98%;
+    }
+    .edit-date-margin-last {
+        margin: 20px 0 10px;
+    }
+    .byu-title {
+        width: fit-content;
+        margin-bottom: 0;
+    }
+}
+@media screen and (max-width: 390px) {
+    .btn_last {
+        display: block;
+    }
+    .check {
+        margin: 10px 0;
+        width: 95%;
+    }
+    .check-div {
+        margin: auto 10px;
+        width: 100%;
+    }
+    .text-title, .img-none {
+        display: none;
+    }
+    .grid-column {
+        grid-template-columns: repeat(4, 3fr);
+    }
+}
