--- a/src/components/createProduct/CreateProduct.css
+++ b/src/components/createProduct/CreateProduct.css
@@ -1,8 +1,8 @@
 .div-btn {
     display: flex;
     justify-content: center;
-    padding-top: 2px;
-    margin: 0 15px;
+    width: 90%;
+    margin: 20px auto;
 }
 .del {
     visibility: hidden;
@@ -16,17 +16,15 @@
     height: 200px;
 }
 .big-btn {
-    width: 93%;
+    width: 100%;
     height: 50px;
-    margin: 20px;
     border-radius: 5px;
     color: white;
     font-weight: 700;
     font-size: 20px;
+    align-items: center;
 }
 .close {
-    position: relative;
-    left: 100%;
     margin: 0;
     cursor: pointer;
 }
@@ -66,21 +64,22 @@ option {
     font-weight: 700;
 }
 .position {
-    padding: 5px 0 5px 20px;
+    padding: 20px 10px 0;
+    width: 100%;
 }
 .select-product {
-    height: 60px;
+    height: 50px;
     position: relative;
     bottom: 25px;
-    padding: 0 17px 0 20px;
 }
 .select-product label {
     color: #47008e;
     font-weight: bold;
-    font-size: 13px;
+    font-size: 14px;
     position: relative;
     top: 25px;
     left: 5px;
+    font-family: 'Noto Sans', sans-serif;
 }
 .standard {
     border-bottom: 2px solid #47008e;
@@ -93,14 +92,18 @@ option {
     color: #47008e;
 }
 .btn-add {
-    width: 93%;
+    width: 100%;
     height: 40px;
     border-radius: 5px;
     font-size: 20px;
     color: #47008e;
+    align-items: center;
+}
+.margin-add-null {
+    margin: 0;
 }
 .btn-position {
-    padding: 5px 0 0 20px;
+    margin: 15px auto;
 }
 
 input[type="file"] {
@@ -115,3 +118,4 @@ input[type="file"] {
     color: #47008e;
     margin-left: 5px;
 }
+
