--- a/src/components/loginingForm/LoginingForm.css
+++ b/src/components/loginingForm/LoginingForm.css
@@ -27,7 +27,9 @@
     padding: 5px 10px;
     align-self: flex-end;
     margin-top: 10px;
-    height: 30px;
+    align-items: center;
+    width: 100%;
+    height: 40px;
 }
 .flex {
     display: flex;
