--- a/src/components/productsPage/ProductsPage.css
+++ b/src/components/productsPage/ProductsPage.css
@@ -1,6 +1,7 @@
 * {
     box-sizing: border-box;
 }
+
 .product-flex {
     display: flex;
     justify-content: center;
@@ -13,12 +14,14 @@
     padding: 15px 10px 0 15px;
     /*background-color: #a5e3d4;*/
 }
+
 .padding {
     padding: 5px;
 }
+
 .category {
     width: 100%;
-    padding: 5px;
+    padding: 0.5vw;
     border: 2px solid #47008e;
     border-radius: 5px;
     color: #47008e;
@@ -26,7 +29,9 @@
     background-color: white;
     font-size: 15px;
     text-align: start;
+    height: 100%;
 }
+
 /*.category:hover,*/
 /*.category.active {*/
 /*    border-color: red;*/
@@ -35,7 +40,29 @@
 .row {
     width: 80%;
     padding-right: 15px;
+
+
+    /*display: grid;*/
+    /*grid-template-rows: repeat(5, 2fr);*/
+    /*grid-template-columns: repeat(5, 2fr);*/
+    /*grid-gap: 2px;*/
 }
+
+/*.row-container {*/
+/*    margin: 0 auto;*/
+/*    width: 100%;*/
+/*    height: 100%;*/
+/*}*/
+.row-container {
+    width: 100%;
+    margin: 0 auto;
+    /*text-align: center;*/
+}
+
+.filter-name-no {
+    display: none;
+}
+
 /* Очистить поплавки после столбцов */
 .row:after {
     content: "";
@@ -46,8 +73,149 @@
 .disp-blok {
     display: block;
 }
+
 .active-menu {
     border-color: #79CBB8FF;
     background-color: #79cbb8;
     color: white;
+}
+
+
+.menu-title, .hr, .non-icon {
+    display: none;
+}
+
+@media screen and (min-width: 810px) {
+    .filter-name {
+        display: none;
+    }
+}
+@media screen and (max-width: 800px) {
+    .product-flex {
+        display: block;
+        justify-content: space-between;
+        align-content: center;
+    }
+
+    .product-menu {
+        width: 100%;
+    }
+
+    .row {
+        margin: 0 auto;
+    }
+
+    .product-menu-container {
+        display: flex;
+        width: 90%;
+        margin: 0 auto;
+    }
+    .category {
+        /*height: 25px;*/
+        padding: 0;
+        height: 120%;
+        text-align: center;
+        align-items: center;
+    }
+    /*.filter-name {*/
+    /*    padding: 10px;*/
+    /*}*/
+    .filter-name {
+        padding: 20px 0 0 10px;
+        margin: 0 auto;
+        text-align: center;
+        font-size: 20px;
+        font-weight: bold;
+    }
+    .padding {
+        flex: 1;
+    }
+
+}
+
+
+@media screen and (max-width: 600px) {
+    .product-menu {
+        top: 50px;
+        left: -100%;
+        width: 100%;
+        height: 100%;
+        position: fixed;
+        z-index: 2;
+        overflow: auto;
+        align-items: center;
+        justify-content: start;
+        transition: .3s;
+    }
+
+    .active-menu-category {
+        left: 0;
+    }
+
+    .product-menu-container {
+        display: block;
+        height: 100%;
+        background-color: white;
+        width: 100%;
+    }
+
+    .category {
+        font-size: 30px;
+        height: 100%;
+        position: relative;
+        border: none;
+    }
+
+    .category-menu {
+        background: none;
+        position: absolute;
+        width: 3rem;
+        height: 3rem;
+        margin: 20px 10px;
+        z-index: 1;
+    }
+
+    .category-menu-bar {
+        display: block;
+        width: 30px;
+        height: 3px;
+        margin: 6px auto;
+        background-color: #47008e;
+        transition: 0.2s;
+    }
+
+    .row {
+        width: 75%;
+        padding: 0;
+    }
+
+    .menu-title {
+        display: flex;
+        justify-content: space-between;
+    }
+
+    .hr {
+        display: block;
+        transform: none;
+        margin: 10px 0;
+    }
+
+    .left-title {
+        font-size: 20px;
+        padding: 10px 0 0 10px;
+    }
+
+    .right-title {
+        font-size: 20px;
+        padding: 10px 0 0;
+    }
+    /*body.no-scroll {*/
+    /*    overflow: hidden;*/
+    /*}*/
+    .non-icon {
+        display: block;
+        position: absolute;
+        right: 0;
+    }
+
 }
