--- a/src/components/footer/Footer.css
+++ b/src/components/footer/Footer.css
@@ -1,14 +1,8 @@
 .footer {
-    /*position: relative;*/
-    /*bottom: 0;*/
-    /*left: 0;*/
-
     width: 100%;
-    height: 4vw;
     background: #79cbb8;
     color: white;
     flex-shrink: 0;
-
     margin-top: auto;
 }
 
@@ -34,4 +28,35 @@
 }
 .logo-p {
     font-size: 3vw;
+}
+
+@media (max-width: 800px) {
+    .logo-p {
+        font-size: 5vw;
+    }
+    .logo {
+        height: 5vw;
+        width: 5vw;
+    }
+    .footer-time {
+        font-size: 1.5vw;
+    }
+    .footer-icon {
+        font-size: 4vw;
+    }
+}
+@media (max-width: 600px) {
+    .logo {
+        height: 7vw;
+        width: 7vw;
+    }
+    .logo-p {
+        font-size: 7vw;
+    }
+    .footer-icon {
+        font-size: 5vw;
+    }
+    .footer-time {
+        font-size: 2vw;
+    }
 }
