add foto to product

--- a/src/components/editPage/EditPage.css
+++ b/src/components/editPage/EditPage.css
@@ -21,7 +21,7 @@
     width: 200px;
     height: 200px;
     border-radius: 50%;
-    background-color: #510c76;
+    /*background-color: #510c76;*/
     margin-bottom: 20px;
 }
 
@@ -105,4 +105,9 @@
 
 .none {
     display: none;
+}
+
+.active-email {
+    text-align: center;
+    color: red;
 }
