--- a/src/components/orders/Orders.css
+++ b/src/components/orders/Orders.css
@@ -117,6 +117,11 @@
     display: flex;
 }
 
+.h1-text-align-center {
+    text-align: center;
+    color: #553a9a;
+}
+
 .margin-right-date {
     margin-right: 5px;
 }
