--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -26,6 +26,10 @@
     display: inline-block;
 }
 
+.cursor-pointer {
+    cursor: pointer;
+}
+
 .navbar-logo {
     display: flex;
     justify-content: center;
