--- a/src/components/newPochta/NewPochta@media.css
+++ b/src/components/newPochta/NewPochta@media.css
@@ -1,3 +1,9 @@
+@media screen and (min-width: 1920px) {
+    .select-search__input {
+        font-size: 2.5vh;
+    }
+}
+
 @media screen and (min-width: 600px) {
     .select-search {
         margin: 10px 0;
