--- a/src/components/loginingForm/LoginingForm.css
+++ b/src/components/loginingForm/LoginingForm.css
@@ -7,7 +7,7 @@
     border-radius: 20px;
     padding: 30px;
     align-self: center;
-    margin-top: 150px;
+    margin: 100px auto;
 }
 
 .border {
@@ -56,8 +56,30 @@
     color: #79cbb8;
     margin: 15px 10px 0 10px;
     cursor: pointer;
+    text-align: right;
+    width: 100%;
 }
 
 #block_check_login {
     height: 5px;
+}
+
+button:disabled {
+    background-color: #cccccc;
+    cursor: auto;
+}
+
+.error-input {
+    color: red;
+    font-size: 2vh;
+    text-align: right;
+    width: 100%;
+}
+
+input:valid:not(:placeholder-shown) {
+    border-color: #47008e;
+}
+
+input:invalid:not(:placeholder-shown) {
+    border-color: red;
 }
